# TechnologiesLabaSeventh

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp
otherVariants/: 10_Employee.cpp  11_Movie.cpp  12_Song.cpp  13_Timer.cpp  14_Box.cpp  15_Point.cpp  16_Vector2D.cpp  17_ComplexNumber.cpp  18_Fraction.cpp  19_Date.cpp  1_Circle.cpp  20_Time.cpp  21_Ticket.cpp  22_Product.cpp  23_Order.cpp  24_City.cpp  25_Country.cpp  26_Train.cpp  27_Airplane.cpp  28_Bus.cpp  29_Building.cpp  2_Triangle.cpp  30_Room.cpp  31_Teacher.cpp  32_Courtse.cpp  33_Bank.cpp  34_Warehouse.cpp  35_Book.cpp  3_Car.cpp  4_Student.cpp  5_Account.cpp  6_BankCard.cpp  7_Laptop.cpp  8_Smatrphone.cpp  9_Temperature.cpp  task.txt
src/: main.cpp
